--- a/packages/array/package.json
+++ b/packages/array/package.json
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "gitHead": "ff40b91cb2d5b6997b2d970cbd1e3782f50356cd"
