--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4"
   },
@@ -21,6 +25,13 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "prepare": "husky install",
+    "lint": "lint-staged",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+
+  },
+  "lint-staged": {
+    "src/*.{js,jsx,ts}": "eslint"
   }
 }
